<resources>
    <string name="app_name">Abiodun Ojo N01178447</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mustImpFragment">must implement OnFragmentInteractionListener</string>
    <string name="firstName">Abiodun</string>
    <string name="settings">Settings</string>
    <string name="lastName">Ojo</string>
    <string name="nav_header_title">Home</string>
    <string name="fileName">abiodun.txt</string>
    <string name="courseName">CENG 318 - Software Project</string>
    <string name="fullName">Abiodun Ojo</string>
    <string name="studentNo">N01178447</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="clock_format">Clock Format</string>
    <string name="hr_24">24Hr</string>
    <string name="hr_12">12Hr</string>
    <string name="font_size">Font Size</string>
    <string name="portrait_only">Portrait Only</string>
    <string name="submit">Submit</string>
    <string name="download_image">Download Image</string>
    <string name="completion_percentage">% Completion</string>
    <string name="image_downloaded_from_the_internet">Image downloaded from the internet</string>
    <string name="web_services">Web Services</string>
    <string name="enter_zip_code">Enter ZIP Code</string>
    <string name="fileExists">File already exist</string>
    <string name="downloaded">Downloaded</string>
    <string name="bytesText">bytes</string>
    <string name="asyncTask">MyAsyncTask</string>
    <string name="progressUpdate">onProgressUpdate -</string>
    <string name="downloadStopped">Download stopped!!</string>
    <string name="cancelCalled">on Cancelled called</string>
    <string name="notHTTP">Not an HTTP connection</string>
    <string name="request_granted">You granted Access</string>
    <string name="request_declined">You declined Access</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="github_url">http://github.com/biodunduke/</string>
    <string name="chooseColor">Choose color</string>
    <string name="menu_help">Help</string>
    <string name="menu_location">Location</string>
    <string name="menu_sms">SMS</string>
    <string name="phoneNo">6478093641</string>
    <string name="smsSent">SMS_SENT</string>
    <string name="smsDelivered">SMS_DELIVERED</string>
    <string name="genericFailure">Generic failure</string>
    <string name="noService">No service</string>
    <string name="nullPDU">Null PDU</string>
    <string name="radioOff">Radio off</string>
    <string name="deliveredSMS">SMS delivered</string>
    <string name="smsUndelivered">SMS not delivered</string>
    <string name="confirmExit">Are you sure you want to exit?</string>
    <string name="yesDialog">Yes</string>
    <string name="noDialog">No</string>
    <string name="pageTitle">Page </string>
    <string name="gettingWebStuff">....In Progress.. Please wait</string>
    <string name="zipLenght">Invalid Zip Code length</string>
    <string name="enterZip">Enter zip code</string>
    <string name="dataRetireved">Data Retrieved Successfully</string>
    <string name="zipNotFound">Zip Code not found</string>
    <string name="siteDown">Error, site cannot be reached</string>
    <string name="finished">Finished:</string>
</resources>
