<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/abiodunDownLayout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/fragDown"
    tools:context=".AbiDown">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/abiodunDownTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/firstName" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <Button
            android:id="@+id/abiodunDownloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/download_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/abiodunProgressUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completion_percentage" />

    <ImageView
        android:id="@+id/abiodunImage1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_downloaded_from_the_internet" />

</LinearLayout>