<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/fragSrv"
    tools:context=".OjSrv">

    <TextView
        android:id="@+id/abiodunSrvTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lastName" />
    <View
        android:id="@+id/abiodunDivider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/abiodunEditZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_zip_code"
        android:hint="@string/enter_zip_code"
        android:inputType="number" />

    <View
        android:id="@+id/abiodunDivider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

<Button
    android:id="@+id/abiodunWebCall"
    android:layout_width="wrap_content"
    android:text="@string/web_services"
    android:layout_height="wrap_content" />
    <View
        android:id="@+id/abiodunDivider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/abiodunWebContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>